src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Gross</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net of Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EC Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Non-registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>langue_compte__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Français</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Espagnol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lien_groupe_chatter__c</fullName>
        <label>lien groupe chatter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>of_Old_Projects__c</fullName>
        <description>Shows the number of projects created two or more years ago that are related to the Organization.</description>
        <inlineHelpText>Shows the number of projects created two or more years ago that are related to the Organization.</inlineHelpText>
        <label># of Old Projects</label>
        <summaryFilterItems>
            <field>Projet__c.X2_Years_Old__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Projet__c.Related_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_days_since_last_visit__c</fullName>
        <formula>today()- Last_visit_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of days since last visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Ajusteurs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Clients</value>
        </filters>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Experts en sinistres</value>
        </filters>
        <label>Experts en sinsitres Clients</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>R_gion__c</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Tous les comptes</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Avocats</fullName>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Avocats</value>
        </filters>
        <label>Avocats Clients</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Burlington_view</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>of_days_since_last_visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.SITE</field>
            <operation>equals</operation>
            <value>Hamilton,London,Burlington,Guelph,Waterloo,Oakville,Kitchener,Brampton,Brantfor</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>contains</operation>
            <value>ON</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Clients,Client</value>
        </filters>
        <label>Burlington view</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Clients_MAJ</fullName>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Clients MAJ</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Clients_Ottawa</fullName>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Last_visit_date__c</columns>
        <columns>of_days_since_last_visit__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>R_gion__c</field>
            <operation>equals</operation>
            <value>Ottawa</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>contains</operation>
            <value>Client</value>
        </filters>
        <label>Clients Ottawa</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Clients_Quebec</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Last_visit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <filters>
            <field>R_gion__c</field>
            <operation>equals</operation>
            <value>Québec</value>
        </filters>
        <label>Clients Québec</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Clients_Quebec_assureurs</fullName>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>R_gion__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Last_visit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <filters>
            <field>R_gion__c</field>
            <operation>equals</operation>
            <value>Québec</value>
        </filters>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Assureur</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Actif,Prospect</value>
        </filters>
        <label>Clients Québec_assureurs</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Clients_Toronto</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>R_gion__c</field>
            <operation>equals</operation>
            <value>Toronto</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Concurrence</value>
        </filters>
        <label>Toronto Clients</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>R_gion__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Nouveau cette semaine</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>accoounts_with_no_ID</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CEP_Numero_de_compte_Account_number__c</field>
            <operation>equals</operation>
        </filters>
        <label>accoounts with no ID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Clients</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Clients</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>clients_Laval</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CEP_Numero_de_compte_Account_number__c</columns>
        <columns>R_gion__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>R_gion__c</field>
            <operation>equals</operation>
            <value>Laval</value>
        </filters>
        <label>clients Laval</label>
        <language>fr</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>